--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.0"
   },
   "engines": {
-    "node": ">=14.x"
+    "node": "14.18.1"
   }
 }
