--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "mini-css-extract-plugin": "2.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-react": "^1.2.0",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0-next.58",
