--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "mini-css-extract-plugin": "2.4.7",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
-    "react-react": "^1.2.0",
+    "react-redux": "^7.2.6",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "5.0.0-next.58",
+    "react-scripts": "5",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
